--- a/style.css
+++ b/style.css
@@ -91,20 +91,20 @@ width: 278px;
 height:44px;
 
 }
-.card.icons img{
+.icons{
+    margin: 24px 16px 16px 16px;
+}
+.icons img{
     width: 36px;
-    height: 36px;
-    padding: 9px 8.999998092651367px 8.999998092651367px 9px;
-    border-radius: 100px;
-    
-    
-    
+height: 36px;
+padding: 9px 8px 8px 9px;
+border-radius: 100px;
+
 }
 footer{
     display: flex;
     justify-content: space-between;
-    width: 1654px;
-    height: 512px;
+   
     padding: 108px 184px 181px 164px;
     background-color:#53535354 ;
     
@@ -131,6 +131,7 @@ line-height: 17px;
 letter-spacing: 0em;
 text-align: left;
 color:#535353;
+padding-top: 32px;
 
 }
 .footer-icons{
@@ -138,7 +139,15 @@ color:#535353;
     height: 24px;
     top: 305px;
     left: 176px;
+    padding-top: 28px;
     
+}
+.footer-icons img{
+width: 19px;
+height: 19px;
+top: 2px;
+left: 2px;
+
 }
 .footer-block2{
   width: 136px;
